--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://ezee969.github.io/programacion2_desafio1",
-  "name": "desafio1",
+  "name": "a",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
